--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 Description
 --------
-This is a data set consisting of spinal cord MRI data from 48 participants. For each participant, there is i) a T2-weighted anatomical image, ii) two different kinds of field-maps (vendor-based and in-house), iii) z-shim reference EPI scans, and iv) EPI images obtained under different z-shim sequence variants (no z-shim, manual z-shim, automated z-shim) and with different echo times. For a detailed description please see the following article: Kaptan, M., Vannesjo, S. J., Mildner, T., Horn, U., Hartley-Davies, R., Oliva, V., Brooks, J. C. W., Weiskopf, N., Finsterbusch, J., & Eippert, F. (2021). Automated slice-specific z-shimming for fMRI of the human spinal cord. BioRxiv, 2021.07.27.454049. https://doi.org/10.1101/2021.07.27.454049
+This is a data set consisting of spinal cord MRI data from 48 participants. For each participant, there is i) a T2-weighted anatomical image, ii) two different kinds of field-maps (vendor-based and in-house), iii) z-shim reference EPI scans, and iv) EPI images obtained under different z-shim sequence variants (no z-shim, manual z-shim, automated z-shim) and with different echo times. For a detailed description please see the following article: Kaptan, M., Vannesjo, S. J., Mildner, T., Horn, U., Hartley-Davies, R., Oliva, V., Brooks, J., Weiskopf, N., Finsterbusch, J., & Eippert, F. (2022). Automated slice-specific z-shimming for functional magnetic resonance imaging of the human spinal cord. Human brain mapping, 10.1002/hbm.26018. https://doi.org/10.1002/hbm.26018.
 
 
 Citing this dataset
 --------
-Should you make use of this data set in any publication, please cite the following article: Kaptan, M., Vannesjo, S. J., Mildner, T., Horn, U., Hartley-Davies, R., Oliva, V., Brooks, J. C. W., Weiskopf, N., Finsterbusch, J., & Eippert, F. (2021). Automated slice-specific z-shimming for fMRI of the human spinal cord. BioRxiv, 2021.07.27.454049. https://doi.org/10.1101/2021.07.27.454049
+Should you make use of this data set in any publication, please cite the following article: Kaptan, M., Vannesjo, S. J., Mildner, T., Horn, U., Hartley-Davies, R., Oliva, V., Brooks, J., Weiskopf, N., Finsterbusch, J., & Eippert, F. (2022). Automated slice-specific z-shimming for functional magnetic resonance imaging of the human spinal cord. Human brain mapping, 10.1002/hbm.26018. https://doi.org/10.1002/hbm.26018.
 
 
 License
