[OpenNeuro] Recorded changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.0.3 2022-08-14
+  - Edited citations for the publication
 1.0.2 2022-06-24
   - Added README_derivatives file to the derivatives/ folder
 1.0.1 2022-03-16
